scripts/tests/errors/err_array_negative_oob.bu
// Test: negative array index beyond bounds
// Expected: runtime error "Array index out of bounds"

var arr = [10, 20, 30];
var x = arr[-100];
